deb, git and deply quiet